Ajuste no template HTML.

--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>React App</title>
+    <title>Building</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Nascer do sol e por do sol.</noscript>
     <div id="root"></div>
   </body>
 </html>
